# himmp

./: CMakeLists.txt
config/: toolchain-cross-hi3518e.cmake
qcode/src/: avio.c  avio.h  qcode.c  qcode.h
qcode/test/: test.c
