PROJECT(hiqcode)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(${CMAKE_HOME_DIRECTORY}/config/toolchain-cross-hi3518e.cmake)

#-Wall 
SET(CMAKE_C_FLAGS "-O2 -pthread -ffunction-sections -lm -fPIC -lz")

SET(AVIO_DIR "qcode/src")

FILE(GLOB_RECURSE AVIO_LIST "${AVIO_DIR}/*.c")
FILE(GLOB_RECURSE AVIO_TEST_LIST "qcode/test/*.c")

SET(CHIP_LD_FLAGS "-Wl,-gc-sections")
INCLUDE_DIRECTORIES(${CHIP_INC_DIR} ${AVIO_DIR})
LINK_DIRECTORIES(${CHIP_LIBS_DIR})

ADD_EXECUTABLE(qcode ${AVIO_TEST_LIST} ${AVIO_LIST} ${CHIP_LIST})
SET_TARGET_PROPERTIES(qcode PROPERTIES COMPILE_FLAGS "${CHIP_CFLAGS} ${HI_CC_TYPE}" LINK_FLAGS "${CHIP_LDFLAGS} ${CHIP_LD_FLAGS}")

#TARGET_LINK_LIBRARIES(qcode libzbar.a libpng16.a)
TARGET_LINK_LIBRARIES(qcode libzbar.a)